<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_silver"
    tools:context=".FamilyDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:elevation="3dp"
            android:background="@drawable/profile_text_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/family_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center_vertical"
                    android:hint="@string/kalyanam"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/family_income"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyIncomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="text|textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:hint="@string/_98_000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/permanent_address"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_light"
                    android:gravity="start"
                    android:hint="@string/empowering_families_safeguarding_futures_n_because_every_child_s_story_deserves_to_be_cherished"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/familyDetailsSaveButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/green_border"
                android:fontFamily="@font/lato_bold"
                android:text="@string/save_information"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>